force-app/main/default/objects/Request_Update__e/Request_Update__e.object-meta.xml
<CustomObject>
    <label>Request Update</label>
    <pluralLabel>Request Updates</pluralLabel>
</CustomObject>