force-app/main/default/objects/Request_Update__e/fields/AssigneeID__c.field-meta.xml
<CustomField>
    <fullName>AssigneeID__c</fullName>
    <label>AssigneeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>