force-app/main/default/objects/Request_Update__e/fields/ParentId__c__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>Request Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>